# autoresearch

./: .gitmodules  README.md  evolution_results.json  launch_mle_scientist.py  plot_results.py  requirements.txt  run_evolution.py  setup.py  train.py
ai_scientist_mle/: __init__.py  competition_analysis.py  generate_approaches.py  llm.py  perform_experiments.py  perform_review.py  perform_writeup.py  submission.py
autoresearch_MLE/: .gitignore  Dockerfile  README.md  entrypoint.sh  program.md  pyproject.toml
autoresearch_MLE/agent/: __init__.py  grading.py  loop.py  submission.py
autoresearch_MLE/tests/: test_loop_helpers.py
templates/mle_bench/: prompt.json  seed_approaches.json
